<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.user.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/noInternetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_16dp"
        android:backgroundTint="@color/colorPlus"
        android:paddingHorizontal="20dp"
        android:text="@string/no_internet_connection"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/welcome_to_challenger"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:gravity="center"
            android:text="@string/sign_in_or_create_an_account"
            android:visibility="gone"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/loginEmailText"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:drawableEnd="@drawable/ic_transparent"
            android:drawableTint="@color/colorDarkBlue"
            android:hint="@string/email_address"
            android:background="@drawable/round_16dp"
            android:drawableStart="@drawable/ic_email"
            android:textColor="@android:color/background_dark"
            android:ems="10"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/colorDarkBlueLightOpacity"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/loginPasswordText"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_transparent"
            android:drawableTint="@color/colorDarkBlue"
            android:hint="@string/password"
            android:background="@drawable/round_16dp"
            android:textColorHint="@color/colorDarkBlueLightOpacity"
            android:drawableStart="@drawable/password_icon"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/background_dark" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_16dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorAccent" />


        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/googleSignInButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/round_16dp"
            android:drawableStart="@drawable/google_small"
            android:drawableEnd="@drawable/google_small"
            android:paddingHorizontal="12dp"
            android:text="@string/google_sign_in"
            android:textColor="@color/colorDarkBlue" />

        <TextView
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_marginTop="6dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="Privacy Policy" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:alpha="0.5"
        android:text="By"
        android:textSize="17sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/sharing_logo"
        app:layout_constraintBottom_toTopOf="@id/downLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:tint="@android:color/white" />


    <LinearLayout
        android:id="@+id/downLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/forgotPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password" />


        <Button
            android:id="@+id/registerRedirectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/round_16dp"
            android:text="@string/create_an_account"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/skipButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:text="@string/skip" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>