<resources>
    <string name="app_name">Challenger</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="welcome_to_challenger">Welcome to Challenger</string>
    <string name="sign_in_or_create_an_account">Sign in or create an account</string>
    <string name="create_an_account">Create an account</string>
    <string name="stop">Stop</string>
    <string name="skip">Skip</string>
...
